--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
+        		<h1>Hi there, I'm Wajid Ali!</h1>
 				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+        		<li><a href="mailto:wajidali3301@gmail.com">email</a></li>
+        		<li><a href="https://github.com/wajid2496">github.com/wajid2496</a></li>
 			</ul>
 		</footer>
 	</body>
