--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Wajid Ali!</h1>
-				<p>WE WILL ALL TOGETHER KILL THIS CORONA VIRUS </em> STAY HOME & SAFE THE WORLD<a href="/about">Read more about my life...</a></p>
+				<p>WE WILL ALL TOGETHER KILL THIS CORONA VIRUS. </em> PLEASE STAY HOME & SAFE THE WORLD <a href="/about"> Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
