--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:wajidali3301@gmail.com">email</a></li>
+        		<li><a href="mailto:wajidali3301@gmail.com">email-wajidali3301@gmail.com</a></li>
         		<li><a href="https://github.com/wajid2496">github.com/wajid2496</a></li>
 			</ul>
 		</footer>
