--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Wajid Ali!</h1>
+        		<h1>Hi Guys, Hope you are doing well! I'm Wajid Ali From Malaysia, Cyberjaya!</h1>
 				<p>WE WILL ALL TOGETHER KILL THIS CORONA VIRUS.</em> PLEASE STAY HOME & SAFE THE WORLD <a href="/about"> Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
