--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi Guys, Hope you are doing well! I'm Wajid Ali From Malaysia, Cyberjaya!</h1>
-				<p>WE WILL ALL TOGETHER KILL THIS CORONA VIRUS.</em> PLEASE STAY HOME & SAFE THE WORLD <a href="/about"> Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
+				<p>WE WILL ALL TOGETHER KILL THIS CORONA VIRUS.</em> PLEASE STAY HOME & SAFE THE WORLD <a href="/about">Read more about my life...</a></p>
+    		<div class="col-md-3">
+			<img src="/img/mithunlogo.jpg" alt="logo" height="200">
+		
+		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
