--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         		<h1>Hi Guys, Hope you are doing well! I'm Wajid Ali From Malaysia, Cyberjaya!</h1>
 				<p>WE WILL ALL TOGETHER KILL THIS CORONA VIRUS.</em> PLEASE STAY HOME & SAFE THE WORLD <a href="/about">Read more about my life...</a></p>
     		<div class="col-md-3">
-			<img src="/img/mithunlogo.jpg" alt="logo" height="200">
+			<img src="/ali.jpg" alt="logo" height="200">
 		
 		</div><!-- /.blurb -->
 		</div><!-- /.container -->
