--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     		<div class="col-md-3">
 			<img class="mySlides" src="/shah.jpg" alt="logo" height="400">
 			<img class="mySlides" src="/ali.jpg" alt="logo" height="400">
+			<img class="mySlides" src="/alishah.jpg" alt="logo" height="400">
 		
 		</div><!-- /.blurb -->
 		</div><!-- /.container -->
