--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<p>WE WILL ALL TOGETHER KILL THIS CORONA VIRUS.</em> PLEASE STAY HOME & SAFE THE WORLD <a href="/about">Read more about my life...</a></p>
     		<div class="col-md-3">
 			<img class="mySlides" src="/shah.jpg" alt="logo" height="400">
-			<img class="mySlides" src="/me.jpg" alt="logo" height="400">
+			<img class="mySlides" src="/Me.jpg" alt="logo" height="400">
 			<img class="mySlides" src="/alishah.jpg" alt="logo" height="400">
 		
 		</div><!-- /.blurb -->
