--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<footer>
     		<ul>
         		<li><a href="mailto:wajidali3301@gmail.com">email-wajidali3301@gmail.com</a></li>
-        		<li><a href="https://github.com/wajid2496">github.com/wajid2496</a></li>
+        		<li><a href="https://infographics.channelnewsasia.com/covid-19/map.html">Live-coronavirus-update</a></li>
 			</ul>
 		</footer>
 	</body>
