--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<footer>
     		<ul>
         		<li><a href="mailto:wajidali3301@gmail.com">email-wajidali3301@gmail.com</a></li>
-			<li><a href="https://www.facebook.com/wajid3301">My-Facebook</a></li>
+			<li><a href="https://www.facebook.com/wajid3301">MyFacebook</a></li>
         		<li><a href="https://infographics.channelnewsasia.com/covid-19/map.html">LIVE-CORONAVIRUS-UPDATE</a></li>
 			</ul>
 		</footer>
