--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi Guys, Hope you are doing well! I'm Wajid Ali From Malaysia, Cyberjaya!</h1>
-				<p>WE WILL ALL TOGETHER KILL THIS CORONA VIRUS.</em> PLEASE STAY HOME & SAFE THE WORLD <a href="/about">Read more about my life...</a></p>
+				<p>WE WILL ALL TOGETHER KILL THIS CORONA VIRUS.</em> PLEASE STAY HOME & SAFE THE WORLD <a href="/about">Keep washing your hands...</a></p>
     		<div class="col-md-3">
 			<img class="mySlides" src="/shah.jpg" alt="logo" height="400">
 			<img class="mySlides" src="/Me.jpg" alt="logo" height="400">
