--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>WAJID ALI, WORLD</title>
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<body style="background-color:grey;">
 	</head>
 	<body>
 		<nav>
