--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         		<h1>Hi Guys, Hope you are doing well! I'm Wajid Ali From Malaysia, Cyberjaya!</h1>
 				<p>WE WILL ALL TOGETHER KILL THIS CORONA VIRUS.</em> PLEASE STAY HOME & SAFE THE WORLD <a href="/about">Keep washing your hands.. Click below for corona virus live update...</a></p>
     		<div class="col-md-3">
+			<marquee behavior="scroll" direction="left">By Staying at Home Save your/others life!</marquee>
 			<img class="mySlides" src="/shah.jpg" alt="logo" height="400">
 			<img class="mySlides" src="/Me.jpg" alt="logo" height="400">
 			<img class="mySlides" src="/alishah.jpg" alt="logo" height="400">
