--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     		<div class="col-md-3">
 			<marquee behavior="scroll" direction="left">By Staying at Home Save your/others life!</marquee>
 			<marquee behavior="scroll" direction="right">Please take it seriously</marquee>
+			<marquee behavior="alternate" scrollamount="40"><img src="//www.html.am/images/html-codes/marquees/bee.gif" width="72" height="79" alt="Buzzy bee"></marquee>
+<marquee behavior="alternate" scrollamount="15"><img src="//www.html.am/images/html-codes/marquees/bee.gif" width="72" height="79" alt="Buzzy bee"></marquee>
+<marquee behavior="alternate" scrollamount="60"><img src="//www.html.am/images/html-codes/marquees/bee.gif" width="72" height="79" alt="Buzzy bee"></marquee>
+<marquee behavior="alternate" scrollamount="30"><img src="//www.html.am/images/html-codes/marquees/bee.gif" width="72" height="79" alt="Buzzy bee"></marquee>
+
 			<img class="mySlides" src="/shah.jpg" alt="logo" height="400">
 			<img class="mySlides" src="/Me.jpg" alt="logo" height="400">
 			<img class="mySlides" src="/alishah.jpg" alt="logo" height="400">
