--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
 <marquee behavior="alternate" scrollamount="15"><img src="//www.html.am/images/html-codes/marquees/bee.gif" width="72" height="79" alt="Buzzy bee"></marquee>
 <marquee behavior="alternate" scrollamount="60"><img src="//www.html.am/images/html-codes/marquees/bee.gif" width="72" height="79" alt="Buzzy bee"></marquee>
 <marquee behavior="alternate" scrollamount="30"><img src="//www.html.am/images/html-codes/marquees/bee.gif" width="72" height="79" alt="Buzzy bee"></marquee>
+                        <marquee behavior="scroll" direction="left" scrollamount="1">Wajid Ali...</marquee>
+<marquee behavior="scroll" direction="left" scrollamount="10">Is...</marquee>
+<marquee behavior="scroll" direction="left" scrollamount="20">Owner...</marquee>
+<marquee behavior="scroll" direction="left" scrollamount="50">Of this site!</marquee>
 
+			
 			<img class="mySlides" src="/shah.jpg" alt="logo" height="400">
 			<img class="mySlides" src="/Me.jpg" alt="logo" height="400">
 			<img class="mySlides" src="/alishah.jpg" alt="logo" height="400">
