--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 			
 			<img class="mySlides" src="/shah.jpg" alt="logo" height="400">
 			<img class="mySlides" src="/Me.jpg" alt="logo" height="400">
+			<span class="blink_img"><img src="/corona.jpg" style="width:200px;" />/></span>
 		
 		</div><!-- /.blurb -->
 		</div><!-- /.container -->
