--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     		<div class="col-md-3">
 			<marquee behavior="scroll" direction="left">By Staying at Home Save your/others life!</marquee>
 			<marquee behavior="scroll" direction="right">Please take it seriously</marquee>
-			<marquee behavior="alternate" scrollamount="40"><img src="/corona.jpg" width="72" height="79" alt="Buzzy bee"></marquee>
-<marquee behavior="alternate" scrollamount="15"><img src="/corona.jpg" width="72" height="79" alt="Buzzy bee"></marquee>
-<marquee behavior="alternate" scrollamount="60"><img src="/corona.jpg" width="72" height="79" alt="Buzzy bee"></marquee>
-<marquee behavior="alternate" scrollamount="30"><img src="/corona.jpg" width="72" height="79" alt="Buzzy bee"></marquee>
+			<marquee behavior="alternate" scrollamount="40"><img src="/virus.jpg" width="72" height="79" alt="Buzzy bee"></marquee>
+<marquee behavior="alternate" scrollamount="15"><img src="/virus.jpg" width="72" height="79" alt="Buzzy bee"></marquee>
+<marquee behavior="alternate" scrollamount="60"><img src="/virus.jpg" width="72" height="79" alt="Buzzy bee"></marquee>
+<marquee behavior="alternate" scrollamount="30"><img src="/virus.jpg" width="72" height="79" alt="Buzzy bee"></marquee>
                         <marquee behavior="scroll" direction="left" scrollamount="1">Wajid Ali...</marquee>
 <marquee behavior="scroll" direction="left" scrollamount="5">Is...</marquee>
 <marquee behavior="scroll" direction="left" scrollamount="10">Owner...</marquee>
